--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -5,78 +5,81 @@ header {
     top: 1rem;
     z-index: 3;
   }
+
+  .contact-bar {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+
+    font-size: 1.5rem;
+    color: white;
+    padding-right: 2rem;
+  
+    & span{
+      padding-right: 2rem;
+    }
+  }
+
+  .navbar__custom {
+    position: absolute; 
+    top: 3rem;
+    z-index: 1000;
+    width: 100%;
+  }
   
   .header__logo {
     align-self: flex-start;
     height: 10rem;
   }
 
-  .navbar__cart-close i {
-    color: #cc1b1b;
-    font-size: 13px !important
-  }
-  .navbar__cart-close {
-    margin-left: auto;
-    order: 2;
-  }
-  .navbar__cart-button {
-    background-color: #4E363F;
-    cursor: pointer;
-    width: 100%;
-    border: 1px solid #4E363F;
-    color: white;
-    margin-bottom: 0px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
-  .navbar__cart-container{ 
-    overflow-y: scroll;
-    height: 240px;
-  }
-  .navbar__cart-item{
-    display: flex;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-bottom: 0.5px solid #ececec
-  }
-  .navbar__cart > div{
-    width: 250px;
-    transform: translate3d(-205px, 35px, 0px) !important;
-    font-size: 15px
-  }
-  .navbar__custom-item-img {
-    width: 50px;
-    height: 50px;
-  }
-  .navbar__custom i {
-    font-size: 25px
-  }
-  .navbar__custom a {
-    color: black
-  }
-  .navbar__custom {
-    // display: flex;
-    // justify-content: center;
-
-    position: absolute;
-    top: 20px;
-    z-index: 1000;
-    width: 100%;
-  }
-  // .navbar__custom-menu { 
-  //   display: flex;
-  //   width: 100%;
-  //   justify-content: space-evenly;
-  //   font-size: 15px
-  // }
-
   .menu {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+}
 
-    padding: 0 2rem;
+ .menu__button {
+    padding-left: 2rem;
+}
+
+  .menu__button img {
+    width: 1.5rem;
+    margin: 0 !important;
+}
+
+  .menu-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 10rem;
+    padding-left: 15rem;
+
+    -webkit-clip-path: polygon(52% 0, 100% 0%, 100% 100%, 0 100%);
+    clip-path: polygon(17% 0, 100% 0%, 100% 100%, 0 100%);
+
+    background: rgb(253,188,17);
+    background: -moz-linear-gradient(270deg, rgba(253,188,17,1) 48%, rgba(255,231,0,1) 84%);
+    background: -webkit-linear-gradient(270deg, rgba(253,188,17,1) 48%, rgba(255,231,0,1) 84%);
+    background: linear-gradient(270deg, rgba(253,188,17,1) 48%, rgba(255,231,0,1) 84%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fdbc11",endColorstr="#ffe700",GradientType=1);
   }
+
+  .menu-container a {
+    text-decoration: none;
+    color: black;
+    font-size: 2rem;
+    font-weight: 500;
+    
+  }
+
+  .menu-container {
+    width: 100%;
+  }
+
+
+
+ 
+
+  
   
