--- a/src/assets/css/_typography.scss
+++ b/src/assets/css/_typography.scss
@@ -2,18 +2,16 @@ html {
   font-size: 62.5%;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,300,400,400i,500,500i,600,700,900'); 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
 
 
-
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,700,900');
 
 h1 {
   text-transform: uppercase;
   // font-size: 6rem;
   letter-spacing: .5rem;
   text-align: center;
-  padding-top: 5rem;
+  // padding-top: 5rem;
   font-weight: 700;
 }
 
