--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
   }
 
