--- a/src/assets/css/components/_footer.scss
+++ b/src/assets/css/components/_footer.scss
@@ -5,24 +5,21 @@ footer {
     align-items: center;
     background-color: #000;
     color: white;
+    font-size: 1.5rem;
     
-
-    ul {
+    &-list {
         display: flex;
-        list-style-type: none;
-    
-        li {
-            margin: 5rem;
-        }
+        list-style-type: none;    
     }
-
+    & li {
+      margin: 3rem;
+  }
 }
 
 
 .footer__container span{
     font-size: 2.5rem;
   }
-
 
 //   .footer__container ul {
 //     font-size: 15px;
@@ -35,4 +32,21 @@ footer {
 
 .footer-logo {
     height: 7rem;
+}
+
+@media (max-width: 1000px){
+    .footer {
+        font-size: .5rem;
+
+        &-logo {
+            height: 4rem;
+        }
+
+        ul li {
+          margin: 0;
+        }
+    }
+    .footer-links {
+      display: none;
+  }
 }
