--- a/src/assets/css/components/_footer.scss
+++ b/src/assets/css/components/_footer.scss
@@ -34,6 +34,12 @@ footer {
     height: 7rem;
 }
 
+.footer-links ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type : none;
+}
+
 @media (max-width: 1000px){
     .footer {
         font-size: .5rem;
