--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -66,7 +66,7 @@
   &__title {
     font-size: 5rem;
     font-weight: 600;
-    letter-spacing: 5px;
+    // letter-spacing: 5px;
   }
 
   &__subtitle {
@@ -159,7 +159,6 @@
   }
 
   &__formlabel{
-    
     background-color: #FCBB10;
     width: 300px;
     height: 3rem;
@@ -177,7 +176,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 5rem;
+    padding: 1rem 5rem;
   }
 
   &__destiny{
@@ -247,8 +246,9 @@
   }
 
   &__lowertext {
-    padding: 4rem 0; 
+    padding: 2rem 0; 
     border-bottom: solid 1px #777;
+    font-size: 12px;
   }
 }
 
@@ -403,11 +403,11 @@
   }
 
   .top-btn__title {
-    font-size: 1.5rem;
+    font-size: 2rem;
   }
 
   .top-btn__subtitle {
-    font-size: 0.5rem;
+    font-size: 1rem;
   }
 
   .bottom-section h1 {
