--- a/src/assets/css/components/_header.scss
+++ b/src/assets/css/components/_header.scss
@@ -59,6 +59,7 @@ header {
     align-items: center;
     height: 10rem;
     padding-left: 15rem;
+    max-width: 1000px;
 
     -webkit-clip-path: polygon(52% 0, 100% 0%, 100% 100%, 0 100%);
     clip-path: polygon(17% 0, 100% 0%, 100% 100%, 0 100%);
