--- a/src/assets/css/pages/_home.scss
+++ b/src/assets/css/pages/_home.scss
@@ -11,7 +11,7 @@
   background-color: black;
   background-position: center;
   background-size: cover;
-  padding: 20% 0;
+  padding: 20% 10%;
 
   height: 100%;
 
@@ -25,6 +25,7 @@
 
 .top-btn {
   width: 90%;
+  max-width: 1200px;
   height: 20rem;
   margin-bottom: 2%;
   display: flex;
@@ -64,7 +65,7 @@
   }
   
   &__title {
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 600;
     // letter-spacing: 5px;
   }
@@ -80,6 +81,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 90%;
+  max-width: 1200px;
   // padding: 5rem 0;
 
   &__btn {
@@ -132,6 +134,7 @@
     position: absolute;
     width: 100%;
     top: 10rem;
+    max-width: 1200px
   }
 
   &__form {
@@ -325,16 +328,32 @@
   }
 }
 
-.airport-trans {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
-  background-image: url('@../../assets/img/airport-trans-bg.png');
+.airport-trans {
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+
+  background-image: url('@../../assets/img/cruise2.jpg');
   background-position: center;
   text-align: center;
-  height: 30rem;
+  height: 90rem;
   color: white;
+  padding-top: 130px;
+
+  &__text p{
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    padding: 0rem 7rem;
+    text-transform: capitalize;
+    line-height: 52px;
+    
+  }
+
+  &__text b {
+    color: #e9b92b;
+  }
 }
 
 
